fixed alignment of button

--- a/src/pages/stocks/Stocks.module.css
+++ b/src/pages/stocks/Stocks.module.css
@@ -271,11 +271,11 @@
 .stocks-watchlist-heading {
   font-size: 25px;
   font-weight: 600;
-  width: 90%;
+  width: 100%;
   display: flex;
   align-items: center;
   background-color: rgba(228, 227, 227, 0.643);
-  padding: 4px 20px;
+  padding: 4px 0px;
   border-radius: 25px;
   -webkit-box-shadow: 0px 10px 13px -7px #000000,
     5px 5px 15px 5px rgba(0, 0, 0, 0);
@@ -284,12 +284,12 @@
 .stock-watchlist-heading-title {
   width: 100%;
   text-align: center;
-  padding-left: 30px;
+  padding-left: 45px;
 }
 .watchlist-heading-btn {
   display: flex;
   align-items: center;
-  margin: 0 0 0 10px;
+  margin: 0 17px 0 10px;
   padding: 5px 5px;
   border-radius: 50%;
   border: none;
@@ -298,6 +298,7 @@
 }
 .watchlist-heading-btn:hover {
   background-color: #daf7dc;
+  scale: 1.1;
 }
 
 .stocks-watchlist-item {
